[gd_scene format=3 uid="uid://dc7dko6lhm43h"]

[ext_resource type="Script" uid="uid://co1w3ues6d2uc" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://0k47wr8e46f4" path="res://scripts/deck.gd" id="2_deck"]
[ext_resource type="Script" uid="uid://vk3cffeofw16" path="res://scripts/hand.gd" id="3_hand"]
[ext_resource type="Script" uid="uid://djxcqa3apsaps" path="res://scripts/score_display.gd" id="4_score"]
[ext_resource type="Script" uid="uid://lsjrfu713xuo" path="res://scripts/hand_preview.gd" id="5_preview"]
[ext_resource type="Script" uid="uid://vo1550syrrqw" path="res://scripts/joker_slot.gd" id="6_joker"]
[ext_resource type="Script" uid="uid://dvui5y8y55wyt" path="res://scripts/card_pile.gd" id="7_pile"]
[ext_resource type="Script" uid="uid://dg2p3hqkivcc8" path="res://scripts/consumable_slot.gd" id="8_cons"]
[ext_resource type="Script" uid="uid://drb5iuasni8rg" path="res://scripts/shop.gd" id="9_shop"]
[ext_resource type="Script" uid="uid://dpkb2csibhf23" path="res://scripts/blind_select.gd" id="10_blind"]
[ext_resource type="Script" uid="uid://cm78pw7y6jlnu" path="res://scripts/round_result.gd" id="11_result"]
[ext_resource type="Script" uid="uid://cvmjjgcwobh5y" path="res://scripts/victory_celebration.gd" id="12_victory"]
[ext_resource type="Script" uid="uid://chrxurdd32ojx" path="res://scripts/pause_menu.gd" id="13_pause"]
[ext_resource type="Script" uid="uid://tl7tlwgxig8r" path="res://scripts/vortex_transition.gd" id="14_vortex"]

[node name="Main" type="Node2D" unique_id=953239262]
script = ExtResource("1_main")

[node name="Deck" type="Node" parent="." unique_id=1473593829]
script = ExtResource("2_deck")

[node name="Hand" type="Node2D" parent="." unique_id=429143850]
script = ExtResource("3_hand")

[node name="ScoreDisplay" type="Node2D" parent="." unique_id=330469110]
script = ExtResource("4_score")

[node name="HandPreview" type="Node2D" parent="." unique_id=1729156994]
script = ExtResource("5_preview")

[node name="JokerSlot" type="Node2D" parent="." unique_id=800916579]
script = ExtResource("6_joker")

[node name="DrawPile" type="Node2D" parent="." unique_id=1940273573]
script = ExtResource("7_pile")

[node name="DiscardPile" type="Node2D" parent="." unique_id=1533781146]
script = ExtResource("7_pile")

[node name="ConsumableSlot" type="Node2D" parent="." unique_id=1641867419]
script = ExtResource("8_cons")

[node name="Shop" type="Node2D" parent="." unique_id=2016891174]
z_index = 50
script = ExtResource("9_shop")

[node name="BlindSelect" type="Node2D" parent="." unique_id=1990269669]
z_index = 50
script = ExtResource("10_blind")

[node name="RoundResult" type="Node2D" parent="." unique_id=1935763655]
z_index = 50
script = ExtResource("11_result")

[node name="VictoryCelebration" type="Node2D" parent="." unique_id=14269107]
script = ExtResource("12_victory")

[node name="PauseMenu" type="Node2D" parent="." unique_id=357590285]
script = ExtResource("13_pause")

[node name="VortexTransition" type="Node2D" parent="." unique_id=1007853081]
script = ExtResource("14_vortex")

[node name="UILayer" type="Node2D" parent="." unique_id=1104890430]

[node name="TitleLabel" type="Label" parent="UILayer" unique_id=808671055]
offset_top = 15.0
offset_right = 1920.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "BALATRO PROTOTYPE"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="UILayer" unique_id=1415669318]
offset_top = 50.0
offset_right = 1920.0
offset_bottom = 80.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.65, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="UILayer" unique_id=1349903495]
offset_left = 1700.0
offset_top = 340.0
offset_right = 1900.0
offset_bottom = 370.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 26

[node name="AnteLabel" type="Label" parent="UILayer" unique_id=618593795]
offset_left = 1700.0
offset_top = 375.0
offset_right = 1900.0
offset_bottom = 395.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.55, 1)
theme_override_font_sizes/font_size = 16

[node name="BlindLabel" type="Label" parent="UILayer" unique_id=292022165]
offset_left = 1700.0
offset_top = 397.0
offset_right = 1900.0
offset_bottom = 417.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.55, 1)
theme_override_font_sizes/font_size = 16

[node name="BossEffectLabel" type="Label" parent="UILayer" unique_id=478808817]
offset_top = 480.0
offset_right = 1920.0
offset_bottom = 510.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="JokerInfoLabel" type="Label" parent="UILayer" unique_id=1733721170]
offset_top = 275.0
offset_right = 1920.0
offset_bottom = 300.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.75, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="HandsLabel" type="Label" parent="UILayer" unique_id=448066047]
offset_left = 680.0
offset_top = 852.0
offset_right = 880.0
offset_bottom = 875.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.6, 0.9, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="DiscardsLabel" type="Label" parent="UILayer" unique_id=212933126]
offset_left = 1040.0
offset_top = 852.0
offset_right = 1240.0
offset_bottom = 875.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.9, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="DrawPileLabel" type="Label" parent="UILayer" unique_id=2116851948]
offset_left = 1735.0
offset_top = 830.0
offset_right = 1825.0
offset_bottom = 850.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.55, 1)
theme_override_font_sizes/font_size = 16
text = "DRAW"
horizontal_alignment = 1

[node name="DiscardPileLabel" type="Label" parent="UILayer" unique_id=1764363640]
offset_left = 95.0
offset_top = 830.0
offset_right = 185.0
offset_bottom = 850.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.55, 1)
theme_override_font_sizes/font_size = 16
text = "DISCARD"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="UILayer" unique_id=453945515]
offset_left = 680.0
offset_top = 880.0
offset_right = 880.0
offset_bottom = 915.0
theme_override_font_sizes/font_size = 22
text = "   Play Hand   "

[node name="DiscardButton" type="Button" parent="UILayer" unique_id=2038108393]
offset_left = 1040.0
offset_top = 880.0
offset_right = 1240.0
offset_bottom = 915.0
theme_override_font_sizes/font_size = 22
text = "   Discard   "

[node name="SortButton" type="Button" parent="UILayer" unique_id=199178176]
offset_left = 860.0
offset_top = 925.0
offset_right = 1060.0
offset_bottom = 955.0
theme_override_font_sizes/font_size = 16
text = " ♠♥♣♦ / A→2 "
